# jobagent

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: DEPLOY.md
examples/: profile.json
jobagent/: __init__.py  api.py  calibration.py  classify.py  cli.py  detect.py  driver.py  openai_classifier.py  orchestrator.py  policy.py  retry.py  schema.py  store.py
tests/: test_api.py  test_calibration.py  test_classify.py  test_detect.py  test_driver.py  test_orchestrator.py  test_policy.py  test_schema.py  test_v4_retry.py
tests/fixtures/: easy_apply_step1.html
web/: app.js  index.html  style.css
