[project]
name = "jobagent"
version = "0.1.0"
description = "LinkedIn Easy Apply agent — Playwright + structured-output OpenAI"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sai Asish Yamani" }]
dependencies = [
    "playwright>=1.48",
    "pydantic>=2.9",
    "sqlmodel>=0.0.22",
    "alembic>=1.14",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "httpx>=0.27",
    "rich>=13.9",
    "typer>=0.13",
    "rapidfuzz>=3.10",
]

[project.optional-dependencies]
openai = ["openai>=1.54"]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-playwright>=0.5",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.scripts]
jobagent = "jobagent.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["jobagent*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "RUF"]
ignore = ["S101", "S603", "S607", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "integration: requires a running browser",
    "slow: takes more than a couple seconds",
]
addopts = "-q"
